change file names1

--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
 							</div>
 							<div class="project_sq">
 								<a href="https://www.youtube.com/watch?v=Tt47Fw3yGYI">
-									<img src="assets/img/Aid.jpg" alt="" />
+									<img src="assets/img/aid.jpg" alt="" />
 									<p class="project_text">Did the Aid Help?</p>
 								</a>
 							</div>
