--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<a href="index.html"><h2>Catherine Tuntiserirat</h2></a>
 							<nav>
 							<ul>
-							<a href="WorkFiles/Catherine_T.pdf"><li>resume</li></a>
+							<a href="WorkFiles/Catherine_t.pdf"><li>resume</li></a>
 							<a href="project.html"><li>project</li></a>
 							<a href=""><li>photo</li></a>
 							<a href="https://medium.com/@CathTunti"><li>blog</li></ul></a>
