change file names3

--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
 
 							<nav>
 							<ul>
-							<a href="WorkFiles/Catherine_T.pdf"><li>resume</li></a>
+							<a href="WorkFiles/Catherine_t.pdf"><li>resume</li></a>
 							<a href=""><li>project</li></a>
 							<a href=""><li>photo</li></a>
 							<a href="https://medium.com/@CathTunti"><li>blog</li></ul></a>
