--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@
 							</div>
 							<div class="project_sq">
 								<a href="https://medium.com/@CathTunti">
-									<img src="assets/img/pic01.jpg" alt="" />
+									<img src="assets/img/spellchecker.png" alt="" />
 									<p class="project_text">Ocaml Spellchecker</p>
 								</a>
 							</div>
